fix: google naver attributes차이

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -66,6 +66,10 @@ dependencies {
 
 	// OAUTH
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 }
 
 tasks.named('test') {
