bug: prcron.yml 수정

--- a/.github/workflows/prcron.yml
+++ b/.github/workflows/prcron.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      GITHUB_TOKEN: ${{ secrets.PASSWORD }}
+      PASSWORD: ${{ secrets.PASSWORD }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.9
